Added function to get place_name of the selected location and stores place_name and coordinates to the current session
Fixed map popup loading every time in the hompage issue, Now when a user selected a location it stores to the current session and if a location exist in the session the map popup do not appear

Added function to change user location

--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -55,6 +55,7 @@
   <link rel="stylesheet"
     href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.0/mapbox-gl-directions.css"
     type="text/css" />
+  <script src="/javascripts/mapbox.js"></script>
 </head>
 
 <title>{{title}}</title>
