--- a/views/user/view-movie.hbs
+++ b/views/user/view-movie.hbs
@@ -71,6 +71,7 @@
                                 <div class="col-md-8">
                                     <div class="card-body">
                                         <h5 class="card-title text-primary">{{this.theatreDetails.0.theatreName}}</h5>
+                                        <p class="card-title text-primary text-truncate">{{this.theatreDetails.0.location.place_name}}</p>
                                         <p class="card-text">This theatre is <span
                                                 class="text-primary">{{this.geolocationData.distance}}</span> KM away
                                             from your location.</p>
