Fixed issue - showing send ticket option in view order page in both booked case and payment failed case, Now if the payment is failed view order page dont dispaly send ticket option
Modified design of my orders page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -100,6 +100,18 @@ select {
   color: var(--primary) !important;
 }
 
+.pill_enlarge-sm:hover {
+  transition: 300ms;
+  transform: scale(1.01);
+  color: var(--primary) !important;
+}
+
+.pill_enlarge-lg:hover {
+  transition: 300ms;
+  transform: scale(1.05);
+  color: var(--primary) !important;
+}
+
 .pill_shadow:hover {
   box-shadow: 3px 2px 8px #888888;
 }
