--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -253,3 +253,79 @@ select {
   position: relative;
   margin: 0 auto 80vh auto;
 }
+
+.base-timer {
+  position: relative;
+  width: 20vh;
+  height: 20vh;
+}
+
+.base-timer__svg {
+  transform: scaleX(-1);
+}
+
+.base-timer__circle {
+  fill: none;
+  stroke: none;
+}
+
+.base-timer__path-elapsed {
+  stroke-width: 7px;
+  stroke: grey;
+}
+
+.base-timer__path-remaining {
+  stroke-width: 7px;
+  stroke-linecap: round;
+  transform: rotate(90deg);
+  transform-origin: center;
+  transition: 1s linear all;
+  fill-rule: nonzero;
+  stroke: currentColor;
+}
+
+.base-timer__path-remaining.green {
+  color: rgb(65, 184, 131);
+}
+
+.base-timer__path-remaining.orange {
+  color: orange;
+}
+
+.base-timer__path-remaining.red {
+  color: red;
+}
+
+.time-left-label.green {
+  color: rgb(65, 184, 131);
+}
+
+.time-left-label.orange {
+  color: orange;
+}
+
+.time-left-label.red {
+  color: red;
+}
+
+.base-timer__label {
+  position: absolute;
+  width: 20vh;
+  height: 20vh;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 36px;
+}
+
+.time-left-label{
+  position: absolute;
+  width: 20vh;
+  height: 20vh;
+  top: 5vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+}
