Fixed cannot book ticket on theatres with shows tomorrow and day after tomorrow

--- a/views/user/view-movie.hbs
+++ b/views/user/view-movie.hbs
@@ -112,7 +112,7 @@
                                 </div>
                             </div>
                             <div class="text-center mb-3">
-                                <a href=""
+                                <a href="/view-shows?movieId={{../movie._id}}&theatreId={{this.theatreDetails.0._id}}&theatreName={{this.theatreDetails.0.theatreName}}"
                                     class="btn btn-outline-primary text-uppercase font-weight-bold btn-sm px-5 rounded-pill">Book
                                     Here</a>
                             </div>
@@ -144,7 +144,7 @@
                                 </div>
                             </div>
                             <div class="text-center mb-3">
-                                <a href=""
+                                <a href="/view-shows?movieId={{../movie._id}}&theatreId={{this.theatreDetails.0._id}}&theatreName={{this.theatreDetails.0.theatreName}}"
                                     class="btn btn-outline-primary text-uppercase font-weight-bold btn-sm px-5 rounded-pill">Book
                                     Here</a>
                             </div>
